# RichCore

./: .gitignore  README.md  RichCore_v12.spec  SECURITY.md  launcher.py  pyproject.toml
.github/workflows/: build.yml
ai/: admin_manual.txt  base1.txt  base2.txt  config.example.json  config.json  report_examples.json  rules.txt  vip_ad_policy.txt
build_resources/: version_info.txt
docs/: appointments_apps_script.gs  appointments_setup.md
installer/: RichCore_v12.iss
scripts/: build.ps1  build_installer.ps1  publish_release.py  update_from_github.ps1
src/atools/: ai_responder.py  aiasist_bridge.py  appointments.py  game.py  hotkeys.py  log_watcher.py  logging_setup.py  main.py  models.py  optimization.py  parser.py  paths.py  player_lookup.py  report_store.py  settings.py  state.py  supabase_sync.py  telegram_notifier.py  theme.py  updater.py  vip_ad_store.py  vip_ads.py  vip_triggers.py
src/atools/ui/: bind_dialog.py  composition.py  icon_pack.py  main_window.py  overlay.py
