[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "richcore"
version = "1.0.3"
description = "RichCore for UkraineGTA administrators"
requires-python = ">=3.14"
dependencies = [
    "PySide6>=6.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
